--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,11 @@ server:
   port: 80
 spring:
   profiles:
-    active: desenvolvimento
+    active: homologacao
   thymeleaf:
     check-template-location: false
+
+
+
+  application:
+    name: bluepoints
