--- a/src/main/resources/application-desenvolvimento.yml
+++ b/src/main/resources/application-desenvolvimento.yml
@@ -5,7 +5,7 @@ spring:
     password: root
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     open-in-view: false
 
