--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 80
 spring:
   profiles:
-    active: homologacao
+    active: desenvolvimento
   thymeleaf:
     check-template-location: false
 
